examples/test/testpolicy10916.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10916
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key45: value12
      key4: value12
      key26: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value42
          key21: value23
          key5: value42
